# server/src/portfolios/dto/find-all-potfolio.dto.ts
@@ -1,0 +1,12 @@
+import { PortfolioEntity } from '../entities/portfolio.entity'
+import { PickType } from '@nestjs/swagger'
+
+class PotfolioFindAllByLoginUser extends PickType(PortfolioEntity, [
+  'id',
+  'name',
+  'url',
+]) {}
+
+export class FindAllByLoginUserPortfolioResponseDto {
+  data: PotfolioFindAllByLoginUser[]
+}
